cabal-version:      2.4
name:               2dgameengine-haskell
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Zarak
maintainer:         7254237+zarak@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Common
                    , Runner
                    , Renderer
                    , State
                    , Server
                    , Physics

    -- Modules included in this library but not exported.
    other-modules:    Constants

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , monad-loops
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , text
                    , linear
                    , sdl2-gfx
                    , wai
                    , wai-websockets
                    , bytestring
                    , text
                    , network
                    , safe-exceptions
                    , attoparsec
                    , stm
    hs-source-dirs:   src
    default-language: Haskell2010

executable 2dgameengine-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        2dgameengine-haskell,
        monad-loops,
        sdl2,
        sdl2-image,
        sdl2-ttf,
        text,
        linear,
        sdl2-gfx,
        wai,
        wai-websockets

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite 2dgameengine-haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
